fix(styles): set z-index of the layout sidebar collapse toggle button
Related to: CAM-3351

--- a/webapps/client/styles/_ctn.less
+++ b/webapps/client/styles/_ctn.less
@@ -176,6 +176,7 @@ a.expand-collapse {
   opacity: 0.2;
   filter: alpha(opacity=20);
   padding: 5px;
+  z-index: 99;
 
   &.pull-right {
     top: 0;
